Begin gemaakt aan Header

--- a/index.html
+++ b/index.html
@@ -2,9 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Concept Opdracht</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+<header>
+    <section class="nav-outer-container">
+    <nav class="nav-inner-container">
+        <ul>
+            <li>Case Studies</li>
+            <li>Services</li>
+            <li>Contact US</li>
+        </ul>
+    </nav>
+    </section>
+    <div class="header-content-outer-container">
+        <div class="header-content-inner-container">
+        <h1>You website is an investment in the succes of your business.</h1>
+        <p>We are here to help you succeed.</p>
+        <button>let's work together</button>
+    </div>
+</header>
 
 </body>
 </html>
