Header afgemaakt en begin gemaakt aan de intro

--- a/index.html
+++ b/index.html
@@ -8,22 +8,32 @@
 </head>
 <body>
 <header>
-    <section class="nav-outer-container">
-    <nav class="nav-inner-container">
-        <ul>
+    <nav class="nav-outer-container">
+        <ul class="nav-inner-container">
             <li>Case Studies</li>
             <li>Services</li>
             <li>Contact US</li>
         </ul>
     </nav>
-    </section>
     <div class="header-content-outer-container">
         <div class="header-content-inner-container">
-        <h1>You website is an investment in the succes of your business.</h1>
-        <p>We are here to help you succeed.</p>
-        <button>let's work together</button>
+            <h1 class="header-title">You website is an investment in the succes of your business.</h1>
+            <p class="header-paragraph">We are here to help you succeed.</p>
+            <button>let's work together</button>
+        </div>
     </div>
+    <span class="header-squiggle-line-outer-container">
+        <img class="squiggle-line"src="./assets/squiggle_line_stripe.svg" alt="squiggle line">
+    </span>
 </header>
+<main>
+    <section class="introduction">
+        <p>Rekupe is a digital agency in Los Angeles.</p>
+        <p>We use strategic UX, SEO optimization and beautiful visual designs to help your business grow.</p>
+        <p>We see every project as a fresh opportunity, pushing ourselves to create new digital experiences.</p>
+        <p class="contact-paragraph">Have a question? Click here to contact us!</p>
+    </section>
+</main>
 
 </body>
 </html>
