Projects bijna afgerond

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,15 +23,54 @@
         </div>
     </div>
     <span class="header-squiggle-line-outer-container">
-        <img class="squiggle-line"src="./assets/squiggle_line_stripe.svg" alt="squiggle line">
+        <img class="squiggle-line" src="./assets/squiggle_line_stripe.svg" alt="squiggle line">
     </span>
 </header>
 <main>
     <section class="introduction">
-        <p>Rekupe is a digital agency in Los Angeles.</p>
-        <p>We use strategic UX, SEO optimization and beautiful visual designs to help your business grow.</p>
-        <p>We see every project as a fresh opportunity, pushing ourselves to create new digital experiences.</p>
-        <p class="contact-paragraph">Have a question? Click here to contact us!</p>
+        <h3>Rekupe is a digital agency in Los Angeles.</h3>
+        <h3>We use strategic UX, SEO optimization and beautiful visual designs to help your business grow.</h3>
+        <h3>We see every project as a fresh opportunity, pushing ourselves to create new digital experiences.</h3>
+        <h3 class="contact-paragraph">Have a question? <a class="link-tag" href="">Click here</a> to contact us!</h3>
+    </section>
+    <section class="projects">
+        <div class="project project-1">
+            <article>
+                <h3 class="project-title">Rolling Stone</h3>
+                <img class="paragraph-squiggle" src="./assets/squiggle_line.svg" alt="">
+                <p class="project-paragraph">You know Rolling Stone. It’s the definitive voice in music, politics and
+                    culture. It’s a global icon.</p>
+                <a class="project-link link-tag" href="">view project</a>
+            </article>
+            <span class="project-image-wrapper">
+            <img class="project-image" src="./assets/work-image-01.jpeg"
+                 alt="The webpage of Rolling stone is visable on a laptopscreen.">
+            </span>
+        </div>
+        <div class="project project-2">
+            <article>
+                <h3 class="project-title">Variety</h3>
+                <img class="paragraph-squiggle" src="./assets/squiggle_line.svg" alt="">
+                <p class="project-paragraph">Variety is an industry leader for breaking entertainment news, reviews and box office results with archive of content dating back to 1905.</p>
+                <a class="project-link link-tag" href="">view project</a>
+            </article>
+            <span class="project-image-wrapper">
+            <img class="project-image" src="./assets/work-image-02.jpeg"
+                 alt="The webpage of Rolling stone is visable on a laptopscreen.">
+            </span>
+        </div>
+        <div class="project project-3">
+            <article>
+                <h3 class="project-title">Worth</h3>
+                <img class="paragraph-squiggle" src="./assets/squiggle_line.svg" alt="">
+                <p class="project-paragraph">A global media platform connecting a community that embraces worth beyond wealth.</p>
+                <a class="project-link link-tag" href="">view project</a>
+            </article>
+            <span class="project-image-wrapper">
+            <img class="project-image" src="./assets/work-image-03.jpeg"
+                 alt="The webpage of Rolling stone is visable on a laptopscreen.">
+            </span>
+        </div>
     </section>
 </main>
 
