--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
             <article>
                 <h3 class="project-title">Variety</h3>
                 <img class="paragraph-squiggle" src="./assets/squiggle_line.svg" alt="">
-                <p class="project-paragraph">Variety is an industry leader for breaking entertainment news, reviews and box office results with archive of content dating back to 1905.</p>
+                <p class="project-paragraph">Variety is an industry leader for breaking entertainment news, reviews and
+                    box office results with archive of content dating back to 1905.</p>
                 <a class="project-link link-tag" href="">view project</a>
             </article>
             <span class="project-image-wrapper">
@@ -63,7 +64,8 @@
             <article>
                 <h3 class="project-title">Worth</h3>
                 <img class="paragraph-squiggle" src="./assets/squiggle_line.svg" alt="">
-                <p class="project-paragraph">A global media platform connecting a community that embraces worth beyond wealth.</p>
+                <p class="project-paragraph">A global media platform connecting a community that embraces worth beyond
+                    wealth.</p>
                 <a class="project-link link-tag" href="">view project</a>
             </article>
             <span class="project-image-wrapper">
@@ -71,6 +73,43 @@
                  alt="The webpage of Rolling stone is visable on a laptopscreen.">
             </span>
         </div>
+    </section>
+
+    <section class="services">
+        <div class="services-inner-container">
+            <article class="service-article">
+            <img class="services-icon" src="./assets/icon_web-design.svg" alt="Icon for web design">
+            <h4 class="services-title">Web Design</h4>
+            <p class="services-paragraph">Good web design is how companies stand out from their competitors. High
+                quality web design leads to increased user conversion and engagement. Through a proven web design
+                process, we help clients launch websites and products that improve on their bottom line.</p>
+        </article>
+        <article class="service-article">
+            <img class="services-icon" src="./assets/icon_web-development.svg" alt="Icon for web development">
+            <h4 class="services-title">Web Development</h4>
+            <p class="services-paragraph">Modern websites need to be responsive and fully functional at all sizes. We develop all of our sites with a mobile first approach and ensure that our code quality is clean, organized and performant. Already have a design but need it developed? We’re here to help!</p>
+        </article>
+        <article class="service-article">
+            <img class="services-icon" src="./assets/icon_ux.svg" alt="Icon for UX">
+            <h4 class="services-title">User Experience</h4>
+            <p class="services-paragraph">In order to build successful products you have to understand the user. We create user personas, wireframes and prototypes to test with users. This allows us to gather feedback which helps to shape the product and can quickly eliminate potential risks – saving you time and money.</p>
+        </article>
+        <article class="service-article">
+            <img class="services-icon" src="./assets/icon_graphic-design.svg" alt="Icon for Graphic Design">
+            <h4 class="services-title">Logo Design + Branding</h4>
+            <p class="services-paragraph">Nike, Apple, Coca-Cola, Starbucks. What do all of these brands have in common? Easily recognizable logos and brand identity. The best brands stand out from the crowd by having a clear and unique point of view. We will work with you to understand your vision and help create a unique brand identity and style guide for your company.</p>
+        </article>
+        <article class="service-article">
+            <img class="services-icon" src="./assets/icon_seo.svg" alt="Icon for SEO">
+            <h4 class="services-title">SEO</h4>
+            <p class="services-paragraph">Do you want your site to rank higher in search results? Google is constantly changing their algorithms for how they rank pages. Don’t worry about constantly playing catch-up. We will make sure your website it optimized, providing you the best opportunities for organic search exposure.</p>
+        </article>
+        <article class="service-article">
+            <img class="services-icon" src="./assets/icon_copywriting.svg" alt="Icon for Copy Writing">
+            <h4 class="services-title">Copy Writing</h4>
+            <p class="services-paragraph"> Brand messaging needs to be clear, direct and easy to understand to be effective. A unique tone of voice will help you stand out from the crowd and build brand loyalty. We work with you to establish your brand bible and ensure your messaging is focused and targeted.</p>
+        </article>
+    </div>
     </section>
 </main>
 
