begin gemaakt aan het contact-form

--- a/index.html
+++ b/index.html
@@ -111,6 +111,14 @@
         </article>
     </div>
     </section>
+    <section class="contact-form">
+        <form class="contact-form-inner-container">
+            <h1>Let's work together</h1>
+            <p>Have a question? Need a quote? Let us know</p>
+
+        </form>
+
+    </section>
 </main>
 
 </body>
