--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <ul class="nav-inner-container">
             <li>Case Studies</li>
             <li>Services</li>
-            <li>Contact US</li>
+            <li><a class="nav-link" href="#contact-form">Contact Us</a></li>
         </ul>
     </nav>
     <div class="header-content-outer-container">
@@ -31,11 +31,11 @@
         <h3>Rekupe is a digital agency in Los Angeles.</h3>
         <h3>We use strategic UX, SEO optimization and beautiful visual designs to help your business grow.</h3>
         <h3>We see every project as a fresh opportunity, pushing ourselves to create new digital experiences.</h3>
-        <h3 class="contact-paragraph">Have a question? <a class="link-tag" href="">Click here</a> to contact us!</h3>
+        <p class="contact-paragraph">Have a question? <a class="link-tag" href="">Click here</a> to contact us!</p>
     </section>
     <section class="projects">
         <div class="project project-1">
-            <article>
+            <article class="project-article">
                 <h3 class="project-title">Rolling Stone</h3>
                 <img class="paragraph-squiggle" src="./assets/squiggle_line.svg" alt="">
                 <p class="project-paragraph">You know Rolling Stone. It’s the definitive voice in music, politics and
@@ -48,7 +48,7 @@
             </span>
         </div>
         <div class="project project-2">
-            <article>
+            <article class="project-article">
                 <h3 class="project-title">Variety</h3>
                 <img class="paragraph-squiggle" src="./assets/squiggle_line.svg" alt="">
                 <p class="project-paragraph">Variety is an industry leader for breaking entertainment news, reviews and
@@ -61,7 +61,7 @@
             </span>
         </div>
         <div class="project project-3">
-            <article>
+            <article class="project-article">
                 <h3 class="project-title">Worth</h3>
                 <img class="paragraph-squiggle" src="./assets/squiggle_line.svg" alt="">
                 <p class="project-paragraph">A global media platform connecting a community that embraces worth beyond
@@ -130,15 +130,15 @@
             <h2>Let's work together</h2>
             <p>Have a question? Need a quote? Let us know</p>
         </div>
-        <form class="contact-form-inner-container">
+        <form class="contact-form-inner-container" id="contact-form">
             <label for="name">Name</label>
-            <input type="text" id="email" placeholder="Name">
+            <input type="text" id="name" placeholder="Name" name="name">
             <br>
             <label for="email">Email</label>
-            <input type="email" id="name" placeholder="Email">
+            <input type="email" id="email" placeholder="Email" name="email">
             <br>
             <label for="message">Message</label>
-            <textarea id="message" placeholder="Message"></textarea>
+            <textarea id="message" placeholder="Message" name="Message"></textarea>
             <input class="button form-btn" type="submit" value="send">
         </form>
 
