Een paar responsive issue opgelost

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <span class="header-squiggle-line-outer-container">
         <img class="squiggle-line" src="./assets/squiggle_line_stripe.svg" alt="squiggle line">
     </span>
+    <div class="triangle"></div>
 </header>
 <main>
     <section class="introduction">
@@ -145,6 +146,7 @@
     </section>
 </main>
 <footer>
+    <div class="triangle triangle-footer"></div>
     <p class="footer-text">Business website opdracht © NOVI Hogeschool 2022</p>
 </footer>
 
