--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <span class="header-squiggle-line-outer-container">
         <img class="squiggle-line" src="./assets/squiggle_line_stripe.svg" alt="squiggle line">
     </span>
-    <div class="triangle"></div>
+    <!--<div class="triangle"></div>-->
 </header>
 <main>
     <section class="introduction">
@@ -146,7 +146,7 @@
     </section>
 </main>
 <footer>
-    <div class="triangle triangle-footer"></div>
+    <!--<div class="triangle triangle-footer"></div>-->
     <p class="footer-text">Business website opdracht © NOVI Hogeschool 2022</p>
 </footer>
 
