link animatie afgemaakt

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <img class="paragraph-squiggle" src="./assets/squiggle_line.svg" alt="">
                 <p class="project-paragraph">You know Rolling Stone. It’s the definitive voice in music, politics and
                     culture. It’s a global icon.</p>
-                <a class="project-link link-tag" href="">view project</a>
+                <a class="project-link" href="">view project</a>
             </article>
             <span class="project-image-wrapper">
             <img class="project-image" src="./assets/work-image-01.jpeg"
@@ -54,11 +54,11 @@
                 <img class="paragraph-squiggle" src="./assets/squiggle_line.svg" alt="">
                 <p class="project-paragraph">Variety is an industry leader for breaking entertainment news, reviews and
                     box office results with archive of content dating back to 1905.</p>
-                <a class="project-link link-tag" href="">view project</a>
+                <a class="project-link" href="">view project</a>
             </article>
             <span class="project-image-wrapper">
             <img class="project-image" src="./assets/work-image-02.jpeg"
-                 alt="The webpage of Rolling stone is visable on a laptopscreen.">
+                 alt="A picture of Variety magazine and a laptop is shown.">
             </span>
         </div>
         <div class="project project-3">
@@ -67,11 +67,11 @@
                 <img class="paragraph-squiggle" src="./assets/squiggle_line.svg" alt="">
                 <p class="project-paragraph">A global media platform connecting a community that embraces worth beyond
                     wealth.</p>
-                <a class="project-link link-tag" href="">view project</a>
+                <a class="project-link" href="">view project</a>
             </article>
             <span class="project-image-wrapper">
             <img class="project-image" src="./assets/work-image-03.jpeg"
-                 alt="The webpage of Rolling stone is visable on a laptopscreen.">
+                 alt="The webpage of Variety is visable on a Tablet.">
             </span>
         </div>
     </section>
