bezig met de schuine aflijning van de sections

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
     <span class="header-squiggle-line-outer-container">
         <img class="squiggle-line" src="./assets/squiggle_line_stripe.svg" alt="squiggle line">
     </span>
-    <!--<div class="triangle"></div>-->
 </header>
 <main>
+    <!--<div class="triangle-outer-container">
+        <div class="triangle"></div>
+    </div>-->
     <section class="introduction">
         <h3>Rekupe is a digital agency in Los Angeles.</h3>
         <h3>We use strategic UX, SEO optimization and beautiful visual designs to help your business grow.</h3>
