--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
     </span>
 </header>
 <main>
-    <!--<div class="triangle-outer-container">
-        <div class="triangle"></div>
-    </div>-->
+    <div class="triangle"></div>
+
     <section class="introduction">
         <h3>Rekupe is a digital agency in Los Angeles.</h3>
         <h3>We use strategic UX, SEO optimization and beautiful visual designs to help your business grow.</h3>
         <h3>We see every project as a fresh opportunity, pushing ourselves to create new digital experiences.</h3>
-        <p class="contact-paragraph">Have a question? <a class="link-tag" href="">Click here</a> to contact us!</p>
+        <p class="contact-paragraph">Have a question? <a class="link-tag" href="#contact-form">Click here</a> to contact
+            us!</p>
     </section>
     <section class="projects">
         <div class="project project-1">
