Eindelijk de schuine lijnen voor elkaar gekregen

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <p class="contact-paragraph">Have a question? <a class="link-tag" href="#contact-form">Click here</a> to contact
             us!</p>
     </section>
+    <div class="triangle triangle-2"></div>
     <section class="projects">
         <div class="project project-1">
             <article class="project-article">
@@ -77,7 +78,7 @@
             </span>
         </div>
     </section>
-
+    <div class="triangle triangle-3"></div>
     <section class="services">
         <div class="services-inner-container">
             <article class="service-article">
@@ -127,6 +128,7 @@
             </article>
         </div>
     </section>
+    <div class="triangle triangle-4"></div>
     <section class="contact-form">
 
         <div class="form-title">
@@ -147,6 +149,7 @@
 
     </section>
 </main>
+
 <footer>
     <!--<div class="triangle triangle-footer"></div>-->
     <p class="footer-text">Business website opdracht © NOVI Hogeschool 2022</p>
