De bonusopdrachten vrijwel afgerond En de code opgeruimd en overzichtelijk gemaakt

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
     <div class="triangle"></div>
 
     <section class="introduction">
+        <div class="intro-paragraph">
         <h3>Rekupe is a digital agency in Los Angeles.</h3>
         <h3>We use strategic UX, SEO optimization and beautiful visual designs to help your business grow.</h3>
         <h3>We see every project as a fresh opportunity, pushing ourselves to create new digital experiences.</h3>
+        </div>
         <p class="contact-paragraph">Have a question? <a class="link-tag" href="#contact-form">Click here</a> to contact
             us!</p>
     </section>
